--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:theme="@style/AppTheme">
 
         <activity
-            android:name=".view.activities.SplashScreenActivity"
+            android:name=".view.activity.SplashScreenActivity"
             android:label="@string/app_name"
             android:theme="@style/splash_theme">
             <intent-filter>
