--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,7 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
+        android:name=".MentorApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -12,9 +13,10 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".view.activity.SplashScreenActivity"
+            android:name=".presentation.view.activity.SplashScreenActivity"
             android:label="@string/app_name"
-            android:theme="@style/splash_theme">
+            android:theme="@style/splash_theme"
+            android:configChanges="orientation">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -22,9 +24,9 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".view.activity.HomeScreenActivity"
+            android:name=".presentation.view.activity.HomeScreenActivity"
             android:label="@string/title_activity_home_screen"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:configChanges="orientation"/>
     </application>
 
 </manifest>
