--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,5 +39,6 @@ dependencies {
     annotationProcessor "android.arch.lifecycle:compiler:1.0.0-alpha1"
     compile "com.squareup.picasso:picasso:2.4.0"
     compile 'com.android.support:recyclerview-v7:25.3.1'
+    compile 'com.squareup:otto:1.3.8'
     testCompile 'junit:junit:4.12'
 }
