--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,8 +15,7 @@
         <activity
             android:name=".presentation.view.activity.SplashScreenActivity"
             android:label="@string/app_name"
-            android:theme="@style/splash_theme"
-            android:configChanges="orientation">
+            android:theme="@style/splash_theme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -25,8 +24,7 @@
         </activity>
         <activity
             android:name=".presentation.view.activity.HomeScreenActivity"
-            android:label="@string/title_activity_home_screen"
-            android:configChanges="orientation"/>
+            android:label="@string/title_activity_home_screen" />
     </application>
 
 </manifest>
