--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,17 +30,18 @@ dependencies {
     compile 'com.squareup.retrofit2:converter-gson:2.3.0'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.android.support:design:25.3.1'
-    annotationProcessor 'com.google.dagger:dagger-compiler:2.8'
     compile 'com.google.dagger:dagger:2.8'
-    provided 'javax.annotation:jsr250-api:1.0'
     compile 'com.squareup.okhttp3:logging-interceptor:3.5.0'
-    compile "android.arch.lifecycle:runtime:1.0.0-alpha1"
-    compile "android.arch.lifecycle:extensions:1.0.0-alpha1"
-    annotationProcessor "android.arch.lifecycle:compiler:1.0.0-alpha1"
-    compile "com.squareup.picasso:picasso:2.4.0"
+    compile 'android.arch.lifecycle:runtime:1.0.0-alpha1'
+    compile 'android.arch.lifecycle:extensions:1.0.0-alpha1'
+    compile 'com.squareup.picasso:picasso:2.4.0'
     compile 'com.android.support:recyclerview-v7:25.3.1'
     compile 'com.squareup:otto:1.3.8'
+    compile 'com.android.support:cardview-v7:25.3.1'
+    compile 'com.android.support:support-v4:25.3.1'
     testCompile 'junit:junit:4.12'
     testCompile 'org.mockito:mockito-core:1.10.19'
-    compile 'com.android.support:cardview-v7:25.3.1'
+    annotationProcessor 'com.google.dagger:dagger-compiler:2.8'
+    annotationProcessor 'android.arch.lifecycle:compiler:1.0.0-alpha1'
+    provided 'javax.annotation:jsr250-api:1.0'
 }
